--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,13 @@
         "php": "^7.4 || ^8.0",
         "ext-json": "*",
         "socialiteproviders/manager": "~4.0",
-        "league/oauth2-client": "^2.7"
+        "league/oauth2-client": "^2.7",
+        "laravel/framework": ">=10.0",
+        "laravel/sanctum": ">=3.0"
     },
     "autoload": {
         "psr-4": {
             "SocialiteProviders\\Zenit\\": "src/"
         }
-    },
-    "require-dev": {
-        "laravel/framework": "^10.34",
-        "laravel/sanctum": "^3.3"
     }
 }
