--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,13 @@
         "psr-4": {
             "SocialiteProviders\\Zenit\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.0"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
     }
 }
